# ssp4cpp

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  notes.md  profiling.md  readme.md  requirements.txt  tmp.md  todo.md  vcpkg-configuration.json  vcpkg.json  vcpkg.md
app/graph_analysis/: CMakeLists.txt  main.cpp
app/graph_analysis/include/: matrix.hpp
app/graph_analysis/src/: dsm.cpp
app/sim/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt
lib/cmake/: ssp4cppConfig.cmake.in
lib/common/: CMakeLists.txt
lib/common/include/: common_interface.hpp  common_io.hpp  common_json.hpp  common_list.hpp  common_log.hpp  common_map.hpp  common_node.hpp  common_print.hpp  common_string.hpp  common_thread_pool.hpp  common_time.hpp  common_types.hpp  common_vector.hpp  common_xml.hpp  tarjan.hpp  xml_deserialize.hpp  xml_serialize.hpp  zip.hpp
lib/common/src/: common_io.cpp  common_json.cpp  common_log.cpp  common_node.cpp  common_thread_pool.cpp  common_time.cpp  tarjan.cpp  zip.cpp
lib/include/: archive.hpp  ssp.hpp
lib/include/extensions/: FMI2_modelDescription_Ext.hpp  SSP1_SystemStructureParameter_Ext.hpp
lib/include/schema/ssp1/: SSP1_Enums.hpp  SSP1_SystemStructureParameterMapping.hpp  SSP1_SystemStructureParameterValues.hpp
lib/include/ssp4cpp/: fmu.hpp  ssp.hpp
lib/include/ssp4cpp/utils/: archive.hpp  interface.hpp  log.hpp  string.hpp  xml.hpp
lib/include/utils/: json.hpp  log.hpp  log_level.hpp  socket.hpp  string.hpp  types.hpp  xml.hpp  xml_deserialize.hpp  xml_serialize.hpp
lib/include_private/schema/fmi2/: FMI2_Enums_XML.hpp  FMI2_modelDescription_XML.hpp
lib/include_private/schema/ssp1/: SSP1_Enums_XML.hpp  SSP1_SystemStructureCommon_XML.hpp  SSP1_SystemStructureDescription_XML.hpp  SSP1_SystemStructureParameterMapping_XML.hpp  SSP1_SystemStructureParameterValues_XML.hpp
lib/include_private/utils/: cutelog_sink.hpp  types.hpp  xml_deserialize.hpp  zip.hpp
lib/python/: CMakeLists.txt  ssp4cpp_python_api.cpp
lib/schema/: CMakeLists.txt
lib/schema/include/: archive.hpp  fmu.hpp  ssp.hpp
lib/schema/include/extensions/: FMI2_Enums_Ext.hpp  FMI2_modelDescription_Ext.hpp  SSP1_SystemStructureDescription_Ext.hpp  SSP_Ext.hpp  (+1 more)
lib/schema/src/: archive.cpp  fmu.cpp  ssp.cpp
lib/schema_parser/: CMakeLists.txt
lib/schema_parser/include/: fmi_import.hpp  ssp.hpp  ssp_import.hpp  ssp_resource.hpp
lib/schema_parser/include_private/: misc.hpp  xml_deserialize.hpp  xml_serialize.hpp  zip.hpp
lib/schema_parser/src/: fmi_import.cpp  fmu.cpp  ssp.cpp  ssp_import.cpp
lib/sim/: CMakeLists.txt  class_diagram.md  main.cpp
lib/sim/docs/: architecture_overview.md  delay.md  enhancement_suggestions.md  model_input_output_dependency_analysis.md  simulation.md  simulation_engine_class_diagram.md  test_system.md
lib/sim/include/: CoSimulationEngine.hpp  DataManager.hpp  DependencyManager.hpp  Model.hpp  ModelExecutor.hpp  Node.hpp  ParameterManager.hpp  Scheduler.hpp  System.hpp  TarjansStrongly.hpp  common_definitions.hpp  readme.md  sim.hpp  simulation.hpp  simulator.cpp  simulator.hpp  variable.hpp
lib/sim/trash/: data_handler._hpp  data_recorder.hpp
lib/src/: archive.cpp  fmu.cpp  ssp.cpp
lib/src/extensions/: SSP1_SystemStructureDescription_Ext.cpp  SSP1_SystemStructureParameter_Ext.cpp
lib/src/utils/: archive.cpp  cutelog_sink.cpp  interface.cpp  log.cpp  socket.cpp  zip.cpp
src/: CMakeLists.txt  fmi_import.cpp  schema_parser.cpp  schema_parser_old.old  ssp4cpp.cpp  ssp_import.cpp  zip.cpp
src/schema/: schema_parser.cpp  xml_misc.cpp
src/schema/fmi2/: FMI2_modelDescription_XML.cpp  fmi2_xml.cpp  fmi2modelDescription.cpp  modelDescription_Ext.cpp  modelDescription_String.cpp  modelDescription_XML.cpp
src/schema/ssp1/: Connection.cpp  Connections.cpp  Connector.cpp  Elements.cpp  SSP1_SystemStructureCommon_String.cpp  SSP1_SystemStructureCommon_XML.cpp  SSP1_SystemStructureDescription_Ext.cpp  SSP1_SystemStructureDescription_XML.cpp  SSP_Enums.cpp  SystemStructureCommon.cpp  SystemStructureCommon_String.cpp  SystemStructureCommon_XML.cpp  SystemStructureDescription.cpp  SystemStructureDescription_Ext.cpp  SystemStructureDescription_String.cpp  SystemStructureDescription_XML.cpp  TComponent.cpp  TConnectors.cpp  TDefaultExperiment.cpp  TSignalDictionaryReference.cpp  TSystem.cpp  common_enums.cpp  common_xml_element.cpp  ssc_xml.cpp  ssd_xml.cpp  ssp_string.cpp
src/zip/: unzip.cpp
test/: CMakeLists.txt  main.cpp  test_main.cpp
test/graph_analysis/: CMakeLists.txt  dsm.cpp  dsm.hpp  graph_analisys.py  graph_analysis.py  main.cpp  matrix.hpp  matrix.py
test/graph_analysis/resources/: 0.txt  1.txt  2.txt  3.txt  4.txt  algebraic_loop_1.ssp  parsed.txt  raw_dsm.txt  t.txt
test/resources/: parsed.txt
test/sim/: test_data_handler.cpp  test_example.cpp
tests/: CMakeLists.txt  main.cpp  test_import.cpp  test_logger.cpp  test_main.cpp
tests/common/: parallel.cpp  test_node.cpp  test_node_iterator.cpp  test_thread_pool.cpp
tests/references/: embrace_ssd.txt  test_recorder_callbacks.csv  test_recorder_data.csv
tests/resources/embrace_scen_folder/: SystemStructure.ssd
tests/resources/references/: embrace_scen_fmu_AdaptionUnit.txt  embrace_scen_fmu_Atmos.txt  embrace_scen_fmu_Consumer.txt  embrace_scen_fmu_ECS_HW.txt  embrace_scen_fmu_ECS_SW.txt  embrace_scen_fmu_scenario.txt  embrace_scen_parameter_map0.txt  embrace_scen_parameter_set0.txt  embrace_scen_ssd.txt  ssp_delay_parameter_set0.txt  ssp_implicit_fmi2_fmu_LET1.txt  ssp_implicit_fmi2_fmu_LET3.txt  ssp_implicit_fmi2_fmu_Sources.txt  ssp_implicit_fmi2_ssd.txt
tests/resources/ssp_implicit_fmi2/: SystemStructure.ssd
tests/sim/: test_data_buf.cpp  test_data_handler.cpp  test_data_manager.cpp  test_data_recorder._cpp  test_data_recorder.cpp  test_data_storage.cpp  test_data_storage2.cpp  test_example.cpp  test_fmi4c_adapter.cpp  test_fmpy_atmos_reference.py  test_import.cpp  test_oms_atmos_reference.py  test_ring_storage.cpp
tests/sim/utils/: test_config.cpp  test_data_handler._cpp  test_data_recorder.cpp  test_data_storage.cpp  test_ring_storage.cpp
(+298 files in other folders)
